--- a/st.1
+++ b/st.1
@@ -133,6 +133,35 @@ and all the remaining arguments are used as a command
 even without it.
 .SH SHORTCUTS
 .TP
+.B Alt-j/k or Alt-Up/Down or Mouse Wheel
+Scroll up/down one line at a time.
+.TP
+.B Alt-u/d or Alt-Page Up/Page Down or Shift-Mouse Wheel
+Scroll up/down one screen at a time.
+.TP
+.B Ctrl-Shift-k/j or Ctrl-Shift-Page Up/Page Down
+Increase or decrease font size.
+.TP
+.B Alt-Home or Alt-0
+Reset to default font size.
+.TP
+.B Shift-Insert or Alt-v
+Paste from clipboard.
+.TP
+.B Alt-c
+Copy to clipboard.
+.TP
+.B Alt-l or Ctrl-Shift-l
+Show rofi menu of all URLs on screen and choose one to copy.
+.TP
+.B Alt-o or Ctrl-Shift-o
+Show rofi menu of all recently run commands and copy the output of the chosen command to the clipboard.
+.I xclip or xsel
+required.
+.TP
+.B Alt-a/s
+Increase or decrease opacity/alpha value (make window more or less transparent).
+.TP
 .B Break
 Send a break in the serial line.
 Break key is obtained in PC keyboards
@@ -149,24 +178,6 @@ Print the full screen to the
 .B Print Screen
 Print the selection to the
 .I iofile.
-.TP
-.B Ctrl-Shift-Page Up
-Increase font size.
-.TP
-.B Ctrl-Shift-Page Down
-Decrease font size.
-.TP
-.B Ctrl-Shift-Home
-Reset to default font size.
-.TP
-.B Ctrl-Shift-y
-Paste from primary selection (middle mouse button).
-.TP
-.B Ctrl-Shift-c
-Copy the selected text to the clipboard selection.
-.TP
-.B Ctrl-Shift-v
-Paste from the clipboard selection.
 .SH CUSTOMIZATION
 .B st
 can be customized by creating a custom config.h and (re)compiling the source
@@ -182,4 +193,3 @@ See the LICENSE file for the terms of redistribution.
 .BR scroll (1)
 .SH BUGS
 See the TODO file in the distribution.
-
