--- a/st.1
+++ b/st.1
@@ -145,10 +145,10 @@ Increase or decrease font size.
 .B Alt-Home or Alt-0
 Reset to default font size.
 .TP
-.B Shift-Insert or Alt-v
+.B Shift-Insert or Alt-v or Ctrl-Shift-v
 Paste from clipboard.
 .TP
-.B Alt-c
+.B Alt-c or Ctrl-Shift-c
 Copy to clipboard.
 .TP
 .B Alt-l or Ctrl-Shift-l
@@ -161,6 +161,9 @@ required.
 .TP
 .B Alt-a/s
 Increase or decrease opacity/alpha value (make window more or less transparent).
+.TP
+.B Alt-Space
+Enter vim mode ie. navigate around st with vim bindings (Press escape or i to get out of insert mode)
 .TP
 .B Break
 Send a break in the serial line.
